@@ -2089,6 +2089,7 @@ version 9.43.1 (2022-09-09)
 version 9.44 (2022-09-30)
     * Adds signed_jwks_uri support to ClientMetadata for OpenID Connect
       Federation 1.0 - draft 22.
+    * Updates EndpointName to OpenID Connect Federation 1.0 - draft 22.
     * Updates TrustMarkClaimsSet to OpenID Connect Federation 1.0 - draft 22.
     * Updates FederationMetadataType to OpenID Connect Federation 1.0 - draft
       22.
